# Data_Engineer_Habi

./: .gitignore  .pre-commit-config.yaml  main.py  pipeline.py  pyproject.toml
Notebooks/: 02.Business_Case.ipynb  02.Conexion_BBDD.ipynb
Utils/: consultas_ab.py  functions.py
app/: main.py
exploration/: eda.ipynb
src/: clean_data.py  clean_data_ab.py  conexion_sql.py  load_records.py  load_records_ab.py  read_data.py  read_data_ab.py
tests/: test_main.py
